# Alfred-Project

./: CMakeLists.txt  README.md  main.cpp
application/: applicationlauncherservice.cpp  applicationlauncherservice.h  applicationlaunchservice.cpp  applicationlaunchservice.h  launcher.cpp  launcher.h  searchengine.cpp  searchengine.h
data/: IndexedItem.h  filesystemindexer.cpp  filesystemindexer.h  filesystemindexingworker.cpp  filesystemindexingworker.h
presentation/: SearchBoxResultListRenderer.h  applicationlauncherlayout.cpp  applicationlauncherlayout.h  applicationlauncherwidget.cpp  applicationlauncherwidget.h  applicationlauncherwidget.ui
